# piezo-puzzle

./: .clang-format-ignore  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt  main.c  readme.md  song0.csv  song1.csv  song2.csv
.github/workflows/: build.yaml
code/: CMakeLists.txt  main.c
data/: make_c_song_code.jl  readme.md  song0.c  song1.c  song2.c  song_hint.c  song_hint.csv  songs.c
tests/: puzzle_tests.md  puzzle_tests.txt
